datacenter/infra/jenkins/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
  namespace: infra
spec:
  type: NodePort
  ports:
    - name: tcp8080
      port: 8080
      targetPort: 8080
    - name: tcp50000
      port: 50000
      targetPort: 50000
  selector:
    k8s-app: jenkins

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-clusterip
  namespace: infra
spec:
  type: ClusterIP
  ports:
    - name: tcp8080
      port: 8080
      targetPort: 8080
    - name: tcp50000
      port: 50000
      targetPort: 50000
  selector:
    k8s-app: jenkins

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: infra
spec:
  type: ClusterIP
  ports:
    - name: tcp8080
      port: 8080
      targetPort: 8080
    - name: tcp50000
      port: 50000
      targetPort: 50000
  selector:
    k8s-app: jenkins
