datacenter/infra/jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: jenkins.ingress-nginx.freedom.org
      http:
        paths:
        - path: /
          backend:
            serviceName: jenkins
            servicePort: 8080
